@@ -12,7 +12,6 @@ import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.awt.*;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -20,15 +19,14 @@ import java.lang.invoke.MethodHandles;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.util.*;
-import java.util.List;
 
 import static de.mephisto.vpin.server.system.SystemService.RESOURCES;
 
 public class ServerUpdatePreProcessing {
   private final static Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
-  private final static List<String> deletions = Arrays.asList("PupPackScreenTweaker.exe");
+  private final static List<String> deletions = List.of("PupPackScreenTweaker.exe");
 
-  private final static List<String> jvmFiles = Arrays.asList("jinput-dx8_64.dll");
+  private final static List<String> jvmFiles = List.of("jinput-dx8_64.dll");
 
   private final static String GITHUB_RESOURCES_URL = "https://raw.githubusercontent.com/syd711/vpin-studio/main/resources/";
 
@@ -89,7 +87,7 @@ public class ServerUpdatePreProcessing {
           synchronizeNVRams(false);
         }).start();
 
-        LOG.info("Finished resource updates check, took " + (System.currentTimeMillis() - start) + "ms.");
+        LOG.info("Finished resource updates check, took {}ms.", System.currentTimeMillis() - start);
       }
       catch (Exception e) {
         LOG.error("Server update failed: " + e.getMessage(), e);
@@ -120,7 +118,7 @@ public class ServerUpdatePreProcessing {
       if (key.endsWith("/")) {
         // Folder-based download: download zip and extract into folder
         File folder = new File(key);
-        if (!folder.exists() || folder.listFiles().length == 0) {
+        if (!folder.exists() || Objects.requireNonNull(folder.listFiles()).length == 0) {
           LOG.info("Starting installation of {}", url);
           folder.mkdirs();
           String fileName = new File(url).getName();
